[project]
name = "langgraph-chatbot-with-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "python-dotenv>=1.1.0",
    "wikipedia>=1.4.0",
]
